idea/testData/multiplatform/unresolvedInMultiplatformLibrary/common/common.kt
package sample
fun common(): Boolean {
    return <!TYPE_MISMATCH!>""<!>
}